Created user search model and added insert search into search history endpoint
- Added swagger docs to new model and controller functions
